# veritas

./: .gitignore  README.md  claude.md  pyproject.toml
.overstory/: config.yaml
.overstory/agent-defs/: veritas-adversary.md  veritas-calibration.md  veritas-logic.md  veritas-source.md  veritas-synthesiser.md
docs/research/: FINDINGS.md  ablation-results.json  benchmark-results.md  comparison-results.md  groundbreaking-options.md  next-moves.md  ragvue-headtohead-results.json
docs/research/benchmarks/: adversarial-results.json  faithbench-results.json  rag-grounding-results.json
tests/: conftest.py  test_agentic.py  test_benchmarks.py  test_cli.py  test_comparison.py  test_config.py  test_enterprise.py  test_integration.py  test_orchestration.py  test_providers.py  test_rag_diagnostics.py  test_result.py  test_verify.py
tests/test_agents/: test_adversary.py  test_base.py  test_calibration.py  test_logic.py  test_source.py  test_synthesiser.py
veritas/: __init__.py
veritas/ablation/: ragvue_headtohead.py  runner.py  single_prompt.py
veritas/agentic/: verification.py
veritas/agents/: adversary.py  base.py  calibration.py  domains.py  logic.py  source.py  synthesiser.py
veritas/benchmarks/: comparison.py  datasets.py  metrics.py  runner.py
veritas/cli/: main.py  shell.py
veritas/core/: cache.py  config.py  result.py  verify.py
veritas/diagnostics/: rag.py
veritas/orchestration/: challenge.py  debate_runner.py  messaging.py  runner.py
veritas/providers/: base.py  claude.py  search.py
