[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas-verify"
version = "0.1.0"
description = "Adversarial parallel verification of AI outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
benchmarks = [
    "datasets>=2.0",
    "numpy>=1.26",
]

[project.scripts]
veritas = "veritas.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["veritas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
